--- a/partials/aside.html
+++ b/partials/aside.html
@@ -11,7 +11,7 @@
         <button 
           data-class:tab:active="$prst_theme === './css/2_theme-default.css'"
           data-class:tab="$prst_theme !== './css/2_theme-default.css'"
-          data-on:click="$prst_theme = './css/2_theme-default.css'">Default</button>
+          data-on:click="$prst_theme = './css/2_theme-default.css'">Evergreen</button>
         <button 
           data-class:tab:active="$prst_theme === './css/2_theme-sahara.css'"
           data-class:tab="$prst_theme !== './css/2_theme-sahara.css'"
